app/assets/stylesheets/calendar.css
#calendar-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 600px
}

#react-calendar-input {
    height: 100%;
    width: var(--calendar-width);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    touch-action: none;
    -webkit-user-select: none;
    user-select: none;
}

.calendar-grid{
    width: var(--calendar-width);
    display: grid;
    grid-template-columns: auto auto;
    grid-template-rows: auto 1fr;
    grid-template-areas: "month year"
      "calendar calendar";
    font-size: 1rem
}

.calendar {
    grid-area: calendar;
    width: var(--calendar-width);
    overflow: clip;
    user-select: none;
    -webkit-user-select: none;
    display: grid;
    grid-template-columns: repeat(7, 1fr);
    grid-template-rows: calc(var(--calendar-height) / 6);
    grid-auto-rows: calc(var(--calendar-height) / 6);
    justify-items: center;
    gap: 0;
    align-items: center;
    margin: 0 auto;
}

.calendar-cell {
    width: 100%;
    height: 100%;
    font-weight: lighter;
    display: inline-grid;
    align-content: center;
    justify-content: center;
    border-radius: 50%;
    touch-action: none;
}

.calendar-cell.today {
    color: green;
    font-weight: bold;
    border: 1px solid;
}

.flat-top {
    border-top-left-radius: 0;
    border-top-right-radius: 0; 
}

.flat-bottom {
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0; 
}

.flat-left {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0; 
}

.flat-right {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0; 
}

.not-same-month {
    opacity: 0.5;
}


.calendar-month, 
.calendar-year {
    margin: 0;
    font-size: 1.05rem;
    font-weight: bold;
}

.calendar-month {
    transform: translate(0.8rem);
    align-self: start;
    grid-area: month;
}

.calendar-year {
    transform: translate(-1rem);
    opacity: 0.5;
    align-self: end;
    grid-area: year;
    text-align: right;
} 

.day-of-week {
    font-weight: bold;
}

.calendar-highlight-cell {
    color: var(--action-text-color);
    background-image: linear-gradient(0deg, var(--background-color), var(--background-color));
}

.calendar-highlight-cell.today {
    color: #0F0;
    font-weight: bold;
}

.btns {
    display: grid;
    justify-content: space-between;
    grid-template-columns: repeat(4, calc(100% / 4 - 5px));
    grid-template-areas: 
        "back-btn instructions-btn other forward-btn";
}

.back-btn {
    grid-area: back-btn;
    color: black;
    background: none;
}

.forward-btn {
    grid-area: forward-btn;
    color: black;
    background: none;
}


input[type='submit'].submit-btn {
    grid-area: other;
    font-weight: bold;
    background: none;
    color: #098643;
}

.instructions-button {
  background: none;
  grid-area: instructions-btn;
  width: 40px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  justify-self: center;
  opacity: 0.8;
}

.calendar-instructions {
  position: fixed;
  top: 0;
  left: 50%;
  transform: translateX(-50%);
  width: Min(100%, 370px);
  z-index: 1;
  box-shadow: 0 0 1rem var(--background-color);
  padding: 0 1rem;
  height: calc(100vh - var(--header-height));
  background-color: var(--action-text-color);
  display: flex;
  flex-direction: column;
  overflow-y: scroll;
}

.calendar-instructions h1 {
  margin-bottom: 0;
}

.calendar-instructions p { 
  margin-top: 0;
}

.calendar-instructions-icon {
  fill: var(--background-color);
}

.close-instructions-button {
  margin-top: auto;
  margin-bottom: 1rem;
  background: none;
  color: var(--background-color);
  align-self: center;
  display: inline-flex;
  align-items: center;
}

.close-icon {
  font-size: 2rem;
  margin-left: 0.25rem;
}

.date-select-message {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.will-select-cell {
  background-color: rgba(0,200,200,1);
  background-blend-mode: overlay;
}

.will-select-cell.calendar-highlight-cell {
  color: var(--background-color);
}

.will-select-cell.today {
  color: rgb(0, 80, 0);
}

.will-unselect-cell {
  color: var(--action-text-color);
  background-color: rgba(180,0,0,1);
  background-blend-mode: overlay;
}

@media (min-width: 450px) {
  .calendar-instructions {
    top: calc(var(--header-height) + 0.5rem);
    border-radius: 1rem;
    height: 610px;
  }
}

